--- a/musavir_app/composer.json
+++ b/musavir_app/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "spatie/laravel-permission": "^6.9",
         "teampanfu/laravel-hcaptcha": "^1.1",
         "twilio/sdk": "^8.2"
     },
